<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="412dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff4f4">

   <TextView
       android:id="@+id/selectMealPlanTV"
       style="@style/ButtomButtonWhite"
       android:background="#fff4f4"
       android:layout_height="32dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:text="@string/meal_plan_select"
       android:layout_marginTop="16dp"
      />


    <TextView
        android:id="@+id/deafultPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/selectMealPlanTV"
        app:layout_constraintStart_toEndOf="@+id/selectMealPlanTV"
        app:layout_constraintEnd_toStartOf="@+id/selectMealPlanTV"
        android:text="@string/defaultPlan"
        android:layout_margin="8dp"
      />

    <CheckBox
        android:id="@+id/vegCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:enabled="false"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@+id/selectMealPlanTV"
        app:layout_constraintEnd_toStartOf="@+id/selectMealPlanTV"
        app:layout_constraintTop_toBottomOf="@+id/deafultPlan"
        />

    <TextView
        android:id="@+id/vegatrianTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/vegCheckBox"
        app:layout_constraintStart_toEndOf="@+id/selectMealPlanTV"
        app:layout_constraintEnd_toStartOf="@+id/selectMealPlanTV"
        android:text="@string/vegCheck"
        android:layout_margin="16dp"/>

    <ImageView
        android:id="@+id/line"
        android:layout_width="120dp"
        android:layout_height="2dp"
        android:layout_margin="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/vegatrianTV"
        app:layout_constraintStart_toEndOf="@+id/selectMealPlanTV"
        app:layout_constraintEnd_toStartOf="@+id/selectMealPlanTV"
   />

    <TextView
        android:id="@+id/prefreedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintStart_toEndOf="@+id/selectMealPlanTV"
        app:layout_constraintEnd_toStartOf="@+id/selectMealPlanTV"
        android:text="@string/selectPreferred"
        android:layout_margin="16dp"
     />


    <CheckBox
        android:id="@+id/chickenCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prefreedTV"
        app:layout_constraintRight_toLeftOf="@+id/beefCheck"
        app:layout_constraintLeft_toLeftOf="parent"
       />


    <TextView
        android:id="@+id/chickenTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chickenTV"
        app:layout_constraintTop_toBottomOf="@+id/chickenCheck"
        app:layout_constraintStart_toEndOf="@id/chickenCheck"
        app:layout_constraintEnd_toStartOf="@id/chickenCheck"
        tools:layout_editor_absoluteX="56dp" />


    <CheckBox
        android:id="@+id/beefCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/chickenCheck"
        app:layout_constraintTop_toBottomOf="@+id/prefreedTV"
        app:layout_constraintEnd_toStartOf="@+id/seefoodCheck"
        app:layout_constraintLeft_toRightOf="@+id/chickenCheck"
         />

     <TextView
     android:id="@+id/beefTV"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/beefTV"
     app:layout_constraintTop_toBottomOf="@+id/beefCheck"
     app:layout_constraintStart_toEndOf="@id/beefCheck"
     app:layout_constraintEnd_toStartOf="@id/beefCheck"
         tools:layout_editor_absoluteX="146dp" />

    <CheckBox
        android:id="@+id/seefoodCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/beefCheck"
        app:layout_constraintTop_toBottomOf="@+id/prefreedTV"
        app:layout_constraintEnd_toStartOf="@+id/lambCheck"
   />

 <TextView
     android:id="@+id/seafoodTV"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/seafoodTV"
     app:layout_constraintTop_toBottomOf="@+id/seefoodCheck"
     app:layout_constraintStart_toEndOf="@+id/seefoodCheck"
     app:layout_constraintEnd_toStartOf="@+id/seefoodCheck"
      />

    <CheckBox
        android:id="@+id/lambCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toEndOf="@id/seefoodCheck"
        app:layout_constraintTop_toBottomOf="@+id/prefreedTV"
        app:layout_constraintEnd_toEndOf="parent" />

 <TextView
     android:id="@+id/lambTV"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/lambTV"
     app:layout_constraintTop_toBottomOf="@+id/lambCheck"
     app:layout_constraintStart_toEndOf="@+id/lambCheck"
     app:layout_constraintEnd_toStartOf="@+id/lambCheck"
     />


  <TextView
      android:id="@+id/whereTV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/lambTV"
      app:layout_constraintStart_toEndOf="@id/selectMealPlanTV"
      app:layout_constraintEnd_toStartOf="@id/selectMealPlanTV"
      android:layout_margin="16dp"
      android:text="@string/whereTV"
      />

 <EditText
     android:id="@+id/adressTV"
     android:layout_width="320dp"
     android:layout_height="32dp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/whereTV"
     android:background="@android:color/white"
     android:singleLine="false"
     android:layout_margin="16dp" />

 <Button
     android:id="@+id/checkOutbtn"
     android:layout_width="320dp"
     android:layout_height="40dp"
     app:layout_constraintTop_toBottomOf="@id/adressTV"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     android:background="@drawable/round_corner_br"
     android:layout_margin="16dp"
     android:text="@string/checkoutBtnTV"
     android:textColor="@android:color/white"
     tools:layout_editor_absoluteX="32dp"
     android:layout_marginTop="12dp" />

</android.support.constraint.ConstraintLayout>