<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="256dp"
    android:elevation="4dp"
    android:translationZ="4dp"
    >
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

   <ImageView
       android:id="@+id/line"
       android:layout_width="160dp"
       android:layout_height="4dp"
       android:background="@android:color/darker_gray"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_margin="16dp"
       app:layout_constraintTop_toTopOf="parent"
       />

    <TextView
        android:id="@+id/orderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderHomeCooked"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toEndOf="@id/line"
        app:layout_constraintEnd_toStartOf="@id/line"
        />

    <TextView
        android:id="@+id/chefTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preparedbyLocal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/orderTV"
        app:layout_constraintStart_toEndOf="@id/line"
        app:layout_constraintEnd_toStartOf="@id/line"
        />

    <Button
        android:id="@+id/OrderBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/OrderNow"
        android:layout_margin="16dp"
        android:background="@drawable/round_corner_br"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/chefTV"
        app:layout_constraintStart_toEndOf="@id/line"
        app:layout_constraintEnd_toStartOf="@id/line"
        />

    <TextView
        android:id="@+id/pormotionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotiontv"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/OrderBtn"
        app:layout_constraintStart_toEndOf="@id/line"
        app:layout_constraintEnd_toStartOf="@id/line"
        />
</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>