<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff4f4"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">
    
    <ImageView
        android:id="@+id/headerView"
        android:layout_width="400dp"
        android:layout_height="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background"
        tool:layout_editor_absoluteX="-6dp" />


    <ImageView
        android:id="@+id/line"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/totalpriceTV"
        app:layout_constraintEnd_toEndOf="@+id/totalpriceTV"
        tool:layout_editor_absoluteX="159dp" />

    <TextView
        android:id="@+id/totalpriceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalPrice"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        tool:layout_editor_absoluteX="159dp" />

    <TextView
        android:id="@+id/priceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tool:text="$59.9"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@+id/totalpriceTV"
        app:layout_constraintEnd_toStartOf="@+id/totalpriceTV"
        app:layout_constraintTop_toBottomOf="@+id/totalpriceTV"
        tool:layout_editor_absoluteX="175dp" />


    <TextView
        android:id="@+id/nameTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameOnCard"
        android:layout_marginTop="32dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView"
        />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/editextfield"
        app:layout_constraintTop_toBottomOf="@+id/nameTitleTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/cardNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardNumber"
        android:layout_marginTop="16dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <EditText
        android:id="@+id/cardNumberET"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/editextfield"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />



    <TextView
        android:id="@+id/expiryDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expiryDate"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberET"
        app:layout_constraintStart_toStartOf="@+id/expriDateET"
      />


    <TextView
        android:id="@+id/securityCodeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/securityNumber"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberET"
        app:layout_constraintStart_toStartOf="@+id/SecurityCodeET"
     />



    <EditText
        android:id="@+id/expriDateET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/editextfield"
        app:layout_constraintTop_toBottomOf="@+id/expiryDateTV"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toStartOf="@+id/SecurityCodeET"
         />

    <EditText
        android:id="@+id/SecurityCodeET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/editextfield"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/expiryDateTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expriDateET"
        />


    <Button
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_br"
        android:text="@string/payNow"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SecurityCodeET"
        />



</android.support.constraint.ConstraintLayout>